# MpRpc

./: README.md  autobuild.sh
example/: user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  userservice.cpp
example/caller/: calluserservice.cpp
lib/include/: mprpcchannel.h  mprpcconfig.h
src/: CMakeLists.txt  mprpcapplication.cpp  mprpcchannel.cpp  mprpcconfig.cpp  mprpccontroller.cpp  mprpcheader.pb.cc  mprpcprovider.cpp  zookeeperuilt.cpp
src/include/: mpcrpcprovider.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  mprpcheader.pb.h  zookeeperuilt.h
